@@ -46,19 +46,11 @@ import java.util.stream.Collectors;
  *
  * TODO: Redesign this package. This class is absorbing too many features.
  */
-public class StochasticArrayTrainable implements Trainable {
+public class StochasticArrayTrainable extends GpuTrainable {
   
   private static final int LOW_MEM_USE = 4 * 1024 * 1024 * 1024;
   private final List<? extends Supplier<Tensor[]>> trainingData;
-  private final NNLayer network;
   private long hash = Util.R.get().nextLong();
-  private int trainingSize = Integer.MAX_VALUE;
-  private boolean gcEachIteration = true;
-  private List<Tensor[]> trainingNNResultArrays;
-  private List<? extends Supplier<Tensor[]>> sampledData;
-  private PointSample lastPtr;
-  private DeltaSet lastWeights;
-  private boolean verbose = true;
   
   /**
    * Instantiates a new Stochastic array trainable.
@@ -80,9 +72,9 @@ public class StochasticArrayTrainable implements Trainable {
    * @param batchSize    the batch size
    */
   public StochasticArrayTrainable(Tensor[][] trainingData, NNLayer network, int trainingSize, int batchSize) {
+    super(network);
     if(0 == trainingData.length) throw new IllegalArgumentException();
     this.trainingData = Arrays.stream(trainingData).map(obj->new WeakCachedSupplier<Tensor[]>(()->obj)).collect(Collectors.toList());
-    this.network = network;
     this.trainingSize = trainingSize;
     resetSampling();
   }
@@ -92,135 +84,11 @@ public class StochasticArrayTrainable implements Trainable {
   }
   
   public StochasticArrayTrainable(List<? extends Supplier<Tensor[]>> trainingData, NNLayer network, int trainingSize, int batchSize) {
+    super(network);
     if(0 == trainingData.size()) throw new IllegalArgumentException();
     this.trainingData = trainingData;
-    this.network = network;
     this.trainingSize = trainingSize;
     resetSampling();
-  }
-  
-  Map<String, Double> deviceWeight = new HashMap<>();
-  Map<String, Integer> deviceBatchSizes = new HashMap<>();
-
-  LoadingCache<CuDNN, ExecutorService> gpuDriverThreads = CacheBuilder.newBuilder().build(new CacheLoader<CuDNN, ExecutorService>() {
-    @Override
-    public ExecutorService load(CuDNN gpu) throws Exception {
-      return Executors.newSingleThreadExecutor(r -> {
-        Thread thread = new Thread(r);
-        thread.setName(gpu.toString());
-        return thread;
-      });
-    }
-  });
-  
-  @Override
-  public PointSample measure() {
-    if(isStale(lastWeights)) {
-      if(verbose) System.out.println(String.format("Returning cached value"));
-      return lastPtr;
-    }
-    List<CudaExecutionContext> devices = CudaExecutionContext.gpuContexts.getAll();
-    double weightSum = devices.stream().mapToDouble(d -> deviceWeight.getOrDefault(d.toString(), 1.0)).sum();
-    List<Future<PointSample>> results = new ArrayList<>();
-    int start = 0;
-    for(int i=0;i<devices.size();i++) {
-      CudaExecutionContext dev = devices.get(i);
-      int sampleSize = (int) ((trainingNNResultArrays.size() / weightSum) * deviceWeight.getOrDefault(dev.toString(), 1.0));
-      int end = start + sampleSize;
-      List<Tensor[]> subList = trainingNNResultArrays.subList(start, end);
-      try {
-        results.add(gpuDriverThreads.get(dev).submit(()->evalDevice(dev, subList)));
-      } catch (ExecutionException e) {
-        throw new RuntimeException(e);
-      }
-      start = end;
-    }
-    PointSample result = results.stream().map(x -> {
-      try {
-        return x.get();
-      } catch (InterruptedException e) {
-        throw new RuntimeException(e);
-      } catch (ExecutionException e) {
-        throw new RuntimeException(e);
-      }
-    }).reduce((a, b) -> new PointSample(a.delta.add(b.delta), a.weights, a.value + b.value)).get();
-    // Between each iteration is a great time to collect garbage, since the reachable object count will be at a low point.
-    // Recommended JVM flags: -XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC
-    if(gcEachIteration) cleanMemory();
-    this.lastWeights = result.weights.copy();
-    this.lastPtr = result;
-    return result;
-  }
-  
-  private PointSample evalDevice(CudaExecutionContext gpu, List<Tensor[]> data) {
-    Integer batchSize = deviceBatchSizes.getOrDefault(gpu.toString(), data.size());
-    try {
-      return evaluate(data, gpu, batchSize);
-    } catch (Throwable t) {
-      if(isOom(t) && batchSize > 1) {
-        batchSize = batchSize / 2;
-        deviceBatchSizes.put(gpu.toString(), batchSize);
-        cleanMemory();
-        return evalDevice(gpu, data);
-      } else {
-        RuntimeException runtimeException = new RuntimeException("Failed executing " + this, t);
-        runtimeException.printStackTrace(System.err);
-        throw runtimeException;
-      }
-    }
-  }
-  
-  private boolean isStale(DeltaSet weights) {
-    if(null == weights) return false;
-    List<DeltaBuffer> av = weights.vector();
-    for(int i=0;i<av.size();i++) {
-      DeltaBuffer ai = av.get(i);
-      double[] aa = ai.getDelta();
-      double[] bb = ai.target;
-      if(aa[0] != bb[0]) return false;
-      if(aa[aa.length/2-1] != bb[aa.length/2-1]) return false;
-      if(aa[aa.length-1] != bb[aa.length-1]) return false;
-    }
-    return true;
-  }
-  
-  private PointSample evaluate(List<Tensor[]> data, CudaExecutionContext gpu, int batchSize ) {
-    long startNanos = System.nanoTime();
-    PointSample deviceResult = Lists.partition(data, batchSize).stream().map(list -> {
-      return eval(NNResult.batchResultArray(list.stream().toArray(i -> new Tensor[i][])), gpu);
-    }).reduce((a, b) -> new PointSample(a.delta.add(b.delta), a.weights, a.value + b.value)).get();
-    double time = (System.nanoTime() - startNanos) * 1.0 / 1e9;
-    if(verbose) System.out.println(String.format("Device %s completed %s items in %s sec", gpu, data.size(), time));
-    deviceWeight.put(gpu.toString(), data.size() / time);
-    return deviceResult;
-  }
-  
-  public void cleanMemory() {
-    Tensor.clear();
-    System.gc();
-    System.runFinalization();
-  }
-  
-  private static boolean isOom(Throwable t) {
-    if(t instanceof OutOfMemoryError) return true;
-    if(null != t.getCause() && t != t.getCause()) return isOom(t.getCause());
-    return false;
-  }
-  
-  private PointSample eval(NNResult[] input, CudaExecutionContext nncontext) {
-    NNResult result = network.eval(nncontext, input);
-    DeltaSet deltaSet = new DeltaSet();
-    result.accumulate(deltaSet);
-    assert (deltaSet.vector().stream().allMatch(x -> Arrays.stream(x.getDelta()).allMatch(Double::isFinite)));
-    DeltaSet stateBackup = new DeltaSet();
-    deltaSet.map.forEach((layer, layerDelta) -> {
-      stateBackup.get(layer, layerDelta.target).accumulate(layerDelta.target);
-    });
-    assert (stateBackup.vector().stream().allMatch(x -> Arrays.stream(x.getDelta()).allMatch(Double::isFinite)));
-    assert (result.getData().stream().allMatch(x -> x.dim() == 1));
-    assert (result.getData().stream().allMatch(x -> Arrays.stream(x.getData()).allMatch(Double::isFinite)));
-    double meanValue = result.getData().stream().mapToDouble(x -> x.getData()[0]).sum();
-    return new PointSample(deltaSet.scale(1.0/trainingSize), stateBackup, meanValue / trainingSize);
   }
   
   @Override
@@ -261,7 +129,7 @@ public class StochasticArrayTrainable implements Trainable {
     refreshSampledData();
   }
   
-  private void refreshSampledData() {
+  protected void refreshSampledData() {
     lastPtr = null;
     lastWeights = null;
     assert 0 < trainingData.size();
@@ -271,23 +139,6 @@ public class StochasticArrayTrainable implements Trainable {
                            .filter(x->x.get()!=null)
                            .limit(getTrainingSize()) //
                            .collect(Collectors.toList()));
-  }
-  
-  public boolean isGcEachIteration() {
-    return gcEachIteration;
-  }
-  
-  public void setGcEachIteration(boolean gcEachIteration) {
-    this.gcEachIteration = gcEachIteration;
-  }
-  
-  protected void setSampledData(List<? extends Supplier<Tensor[]>> sampledData) {
-    this.sampledData = sampledData;
-    //Lists.partition(, batchSize)
-    //.map(xx -> NNResult.batchResultArray(xx.stream().parallel().map(x->x.get()).toArray(i->new Tensor[i][])))
-    this.trainingNNResultArrays = this.sampledData.stream().parallel()
-                                    .map(x->x.get())
-                                    .collect(Collectors.toList());
   }
   
 }
